:construction::wrench: Finish configuring the role entity and assigning permissions when creating the role

--- a/Rental.API/Rental.API.csproj
+++ b/Rental.API/Rental.API.csproj
@@ -19,4 +19,9 @@
     <PackageReference Include="System.ComponentModel.Annotations" Version="5.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Rental.Domain\Rental.Domain.csproj" />
+    <ProjectReference Include="..\Rental.Infrastructure\Rental.Infrastructure.csproj" />
+  </ItemGroup>
+
 </Project>
