--- a/Rental.API/appsettings.json
+++ b/Rental.API/appsettings.json
@@ -1,10 +1,13 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
-    }
-  },
-  "AllowedHosts": "*"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft": "Warning",
+            "Microsoft.Hosting.Lifetime": "Information"
+        }
+    },
+    "ConnectionStrings": {
+        "AircraftRentalConnection": "Server=(LocalDB)\\MSSQLLocalDB;AttachDbFilename=[DataDirectory]\\AircraftRentalDB.mdf;Initial Catalog=AircraftRentalDB;Integrated Security=True;MultipleActiveResultSets=True;Connect Timeout=30"
+    },
+    "AllowedHosts": "*"
 }
