:boom::construction: Add validation of users and roles when registering and obtaining the JWT token in the identity controller

--- a/Rental.API/appsettings.json
+++ b/Rental.API/appsettings.json
@@ -6,6 +6,9 @@
             "Microsoft.Hosting.Lifetime": "Information"
         }
     },
+    "JwtSettings": {
+        "Secret":  "JWT_AIRCRAFT_RENTAL_BACKEND"
+    },
     "ConnectionStrings": {
         "AircraftRentalConnection": "Server=(LocalDB)\\MSSQLLocalDB;AttachDbFilename=[DataDirectory]\\AircraftRentalDB.mdf;Initial Catalog=AircraftRentalDB;Integrated Security=True;MultipleActiveResultSets=True;Connect Timeout=30"
     },
